--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".activities.MainActivity">
+        android:layout_height="match_parent">
 
-    <include
-            android:id="@+id/toolbar"
-            layout="@layout/toolbar_widget" />
-
-    <FrameLayout
-            android:id="@+id/container_body"
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".activities.MainActivity">
 
-    <include
-            layout="@layout/bottom_bar_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="56dp" />
+        <include
+                android:id="@+id/toolbar"
+                layout="@layout/toolbar_widget"/>
 
-</LinearLayout>
+        <FrameLayout
+                android:id="@+id/container_body"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        <include
+                layout="@layout/bottom_bar_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"/>
+
+
+    </LinearLayout>
+
+    <fragment
+            android:id="@+id/fragment_navigation_drawer"
+            android:name="com.francislainy.gists.fragments.FragmentDrawer"
+            android:layout_width="260dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:layout="@layout/fragment_navigation_drawer"
+            tools:layout="@layout/fragment_navigation_drawer"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
