--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -1,21 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".fragments.FragmentCounter">
 
-    <TextView
-            android:id="@+id/tvCounter"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment"/>
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-            android:id="@+id/btnGoToNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical"
+                  android:layout_marginTop="80dp"
+                  tools:context=".fragments.FragmentCounter">
 
-</LinearLayout>
+        <TextView
+                android:id="@+id/tvCounter"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="1"
+                tools:text="@string/hello_blank_fragment"/>
+
+        <!--<GridLayout android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="16dp"-->
+                    <!--android:columnCount="2">-->
+
+            <Button
+                    android:id="@+id/btn1"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_width="wrap_content"
+                    android:text="1"
+                    android:layout_height="80dp"/>
+
+            <Button
+                    android:id="@+id/btn2"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_width="wrap_content"
+                    android:text="2"
+                    android:layout_height="80dp"/>
+
+            <Button
+                    android:id="@+id/btn3"
+                    android:text="3"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"/>
+
+            <Button
+                    android:id="@+id/btn4"
+                    android:text="4"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"/>
+
+        <!--</GridLayout>-->
+
+    </LinearLayout>
+
+</ScrollView>
