--- a/app/src/main/res/layout/bottom_bar_navigation.xml
+++ b/app/src/main/res/layout/bottom_bar_navigation.xml
@@ -11,7 +11,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
             android:background="?android:attr/windowBackground"
-            app:itemBackground="@color/purple_light"
+            app:itemBackground="@color/colorPrimary"
             android:foreground="?attr/selectableItemBackground"
             app:itemIconTint="@color/blue_clear_ocean"
             app:itemTextColor="@color/blue_clear_ocean"
