--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -1,62 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    <com.github.lzyzsd.circleprogress.DonutProgress
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/donutTimer"
+            app:donut_finished_stroke_width="6dp"
+            app:donut_unfinished_stroke_width="3dp"
+            custom:donut_progress="0"
+            custom:donut_text_size="10sp"
+            custom:donut_finished_color="@color/orange"
+            custom:donut_unfinished_color="#B2DFDB"
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:layout_marginTop="80dp"
-                  tools:context=".fragments.FragmentCounter">
+                  app:layout_constraintTop_toBottomOf="@id/donutTimer"
+                  tools:context=".fragments.FragmentCounter"
+                  android:id="@+id/ll_parent"
+                  app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginStart="8dp"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  android:layout_marginEnd="8dp"
+                  tools:layout_editor_absoluteY="133dp"
+                  app:layout_constraintHorizontal_bias="0.0">
 
         <TextView
-                android:id="@+id/tvCounter"
+                android:id="@+id/tvQuestion"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="1"
-                tools:text="@string/hello_blank_fragment"/>
+                android:textColor="@color/colorPrimary"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                tools:text="1"/>
 
-        <!--<GridLayout android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_margin="16dp"-->
-                    <!--android:columnCount="2">-->
+        <GridLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:columnCount="2">
 
             <Button
                     android:id="@+id/btn1"
                     android:layout_gravity="fill_horizontal"
-                    android:layout_width="wrap_content"
-                    android:text="1"
+                    android:layout_width="0dp"
+                    android:background="@color/orange"
+                    android:layout_columnWeight="1"
+                    tools:text="1"
+                    android:textColor="@color/white"
+                    android:layout_margin="4dp"
                     android:layout_height="80dp"/>
 
             <Button
                     android:id="@+id/btn2"
                     android:layout_gravity="fill_horizontal"
-                    android:layout_width="wrap_content"
-                    android:text="2"
+                    android:layout_width="0dp"
+                    android:background="@color/orange"
+                    android:layout_columnWeight="1"
+                    tools:text="2"
+                    android:textColor="@color/white"
+                    android:layout_margin="4dp"
                     android:layout_height="80dp"/>
 
             <Button
                     android:id="@+id/btn3"
-                    android:text="3"
+                    tools:text="3"
+                    android:background="@color/orange"
                     android:layout_gravity="fill_horizontal"
-                    android:layout_width="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:layout_width="0dp"
+                    android:textColor="@color/white"
+                    android:layout_margin="4dp"
                     android:layout_height="80dp"/>
 
             <Button
                     android:id="@+id/btn4"
-                    android:text="4"
+                    tools:text="4"
+                    android:background="@color/orange"
                     android:layout_gravity="fill_horizontal"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="4dp"
+                    android:textColor="@color/white"
                     android:layout_height="80dp"/>
 
-        <!--</GridLayout>-->
+        </GridLayout>
 
     </LinearLayout>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
