--- a/app/src/main/res/layout/fragment_counter_inner.xml
+++ b/app/src/main/res/layout/fragment_counter_inner.xml
@@ -7,7 +7,7 @@
               tools:context=".fragments.FragmentCounter">
 
     <TextView
-            android:id="@+id/tvCounter"
+            android:id="@+id/tvQuestion"
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
