--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -10,14 +10,14 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#f5f5f5"
+            android:background="@color/white"
             android:orientation="vertical">
 
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:background="#FFaaFF"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:orientation="vertical">
 
