--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,12 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
 
     <color name="purple_dark">#351d50</color>
     <color name="purple_light">#97668b</color>
 
     <color name="blue_clear_ocean">#9BD1DD</color>
+    <color name="orange">#FF9800</color>
 
 </resources>
