--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="button_answer">
+        <item name="android:layout_gravity">fill_horizontal</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:background">@color/orange</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_height">80dp</item>
+    </style>
 
 </resources>
