--- a/app/src/main/res/layout/bottom_bar_navigation.xml
+++ b/app/src/main/res/layout/bottom_bar_navigation.xml
@@ -10,11 +10,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:background="?android:attr/windowBackground"
-            app:itemBackground="@color/colorPrimary"
-            android:foreground="?attr/selectableItemBackground"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
+            app:backgroundTint="@color/colorPrimary"
+            app:itemIconTint="@drawable/bottom_navigation_selector"
             app:labelVisibilityMode="unlabeled"
             app:menu="@menu/bottom_main_menu"/>
 
