--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,13 @@
         <item name="android:layout_margin">4dp</item>
         <item name="android:layout_height">80dp</item>
     </style>
+    <style name="button_tic_tac_toe">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:background">@color/orange</item>
+        <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
